# Arufa

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  submission.json
docs/: 02-system-architecture.md  architecture.md  evals.md  methodology.md
docs/challenge/: README.md
docs/submission/: README.md
py/apps/arufa/: .env.example  pyproject.toml
py/apps/arufa/arufa/: __init__.py  main.py
py/apps/arufa/arufa/extract/: __init__.py  pipeline.py
py/apps/arufa/arufa/orchestrate/: __init__.py  pipeline.py  state.py  tool_client.py
py/apps/arufa/arufa/shared/: __init__.py  config.py  exception_handlers.py  middleware.py  observability.py  prompts.py
py/apps/arufa/arufa/shared/llm/: __init__.py  client.py  errors.py  result.py
py/apps/arufa/arufa/shared/models/: __init__.py  extract.py  orchestrate.py  triage.py
py/apps/arufa/arufa/triage/: __init__.py  pipeline.py  safety_rules.py
py/apps/arufa/prompts/: extract_system.md  orchestrate_planner.md  triage_system.md
py/apps/arufa/tests/: __init__.py  conftest.py  test_endpoints.py  test_exception_handlers.py  test_extract_pipeline.py  test_health.py  test_llm_client.py  test_middleware.py  test_orchestrate_pipeline.py  test_safety_rules.py  test_tool_client.py  test_triage_pipeline.py
py/data/task3/: public_eval_50_gold.json
