[project]
name = "arufa"
version = "0.1.0"
description = "Arufa: signal triaging, extraction, and orchestration for FDEBench"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.0.0",
    "httpx>=0.28.1",
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arufa"]

[tool.pyright]
pythonVersion = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
